--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
-/db/*.sqlite3-journalgit
+/db/*.sqlite3-journalgitm
 
 # Ignore all logfiles and tempfiles.
 /log/*
